--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.2.17",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
+    "nexmo": "^2.4.0",
     "npm": "^6.4.1",
     "redis": "^2.8.0",
     "winston": "^3.1.0"
