--- a/API/package.json
+++ b/API/package.json
@@ -22,7 +22,8 @@
     "nexmo": "^2.4.0",
     "npm": "^6.4.1",
     "redis": "^2.8.0",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.5.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
